--- a/slackzz/src/styles/globals.css
+++ b/slackzz/src/styles/globals.css
@@ -6,7 +6,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --color-dark: #451c49;
+  --color-primary-dark: #451c49;
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
