--- a/slackzz/src/styles/globals.css
+++ b/slackzz/src/styles/globals.css
@@ -124,3 +124,15 @@
     @apply bg-background text-foreground;
   }
 }
+
+.tiptap.proseMirror {
+  outline: none;
+}
+
+.tiptap p.is-editor-empty:first-child::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
