--- a/slackzz/src/styles/globals.css
+++ b/slackzz/src/styles/globals.css
@@ -2,7 +2,7 @@
 @import "tw-animate-css";
 @import "uploadthing/tw/v4";
 @source "../node_modules/@uploadthing/react/dist"; /** <-- depends on your project structure */
-
+@plugin "@tailwindcss/typography";
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
